fix text align in status dropdown

--- a/SatDash/src/app/alerts/alerts.component.scss
+++ b/SatDash/src/app/alerts/alerts.component.scss
@@ -1,15 +1,6 @@
 .alerts-biggest-box {
-  border: 1px solid rgba(255, 255, 255, 0.125);
-}
-
-.alert-table {
-  font-size: 1rem;
-  display: flex;
-  width: 100%;
-}
-.alert-bin-header {
-  display: flex;
-  justify-content: center;
+  border-right: 1px solid rgba(255, 255, 255, 0.125);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.125);
 }
 
 .alert-bin-header {
@@ -18,33 +9,15 @@
   z-index: 5;
   top: 0 !important;
   display: flex;
-  align-content: center;
-}
-
-.rux-table {
-  height: 75vh;
-  overflow-y: scroll;
-  z-index: 2;
-  width: 100%;
-}
-
-.rux-table th {
-  position: sticky;
-  top: 0;
-  z-index: 5;
-}
-
-.rux-checkbox {
-  display: flex;
-  justify-content: center;
   align-items: center;
-  margin-top: 7px;
+  justify-content: space-evenly;
 }
 
 .alert-bin-header h2 {
-  margin: 0 2rem;
   font-weight: 800;
-  font-size: 2rem;
+  font-size: 3rem;
+  margin: 0;
+  text-align: center;
 }
 
 .dropdown-filter-box {
@@ -63,14 +36,39 @@ label {
   font-weight: 700;
 }
 
+.alert-table {
+  font-size: 0.8vw;
+
+  display: flex;
+  width: 100%;
+  height: 35vw;
+  overflow: scroll;
+}
+
+.rux-table {
+  overflow-y: scroll;
+  z-index: 2;
+  width: 100%;
+}
+
+.rux-table th {
+  position: sticky;
+  top: 0;
+  z-index: 5;
+}
+
+.rux-checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 7px;
+}
+
 .rux-select {
   margin-top: 0.5rem;
 }
 
 .rux-table {
-  // height: 300px;
-  width: 100%;
-  white-space: nowrap;
   overflow-y: scroll;
   table-layout: auto;
 }
@@ -81,5 +79,17 @@ label {
 }
 
 .rux-table td {
-  padding: 0.5rem;
+  padding: 0;
+}
+
+.alerts-button-footer {
+  display: flex;
+  padding: 2rem;
+  justify-content: center;
+}
+
+.alerts-button-footer button {
+  margin: 0 1rem;
+  cursor: pointer;
+  width: 7rem;
 }
