--- a/SatDash/src/app/app.component.scss
+++ b/SatDash/src/app/app.component.scss
@@ -1,11 +1,8 @@
 .app-container {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  grid-template-rows: auto;
   position: relative;
   background-color: rgb(26, 40, 56);
-  height: 100vh;
-  overflow: hidden;
 }
 
 .contacts-final {
